--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,22 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/ArduinoModbus@^1.0.6
 	arduino-libraries/ArduinoRS485@^1.0.2
+upload_protocol = custom
+upload_port = usb
+upload_speed = 19200
+board_fuses.lfuse = 0xFF
+board_fuses.hfuse = 0xDA
+board_fuses.efuse = 0xFD
+upload_flags =
+    -C
+    ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
+    ${platformio.packages_dir}/tool-avrdude/avrdude.conf
+    -p
+    $BOARD_MCU
+    -P
+    $UPLOAD_PORT
+    -b
+    $UPLOAD_SPEED
+    -c
+    avrispmkii
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
