Temp Sensor Modbus Library revamp

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,3 +34,4 @@ upload_flags =
     -c
     avrispmkii
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+;upload_command = avrdude $UPLOAD_FLAGS -Uhfuse:w:0xDA:m -Uefuse:w:0xFD:m -Ulfuse:w:0xFF:m -U flash:w:$SOURCE:i
